--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Math.NET Classic</title>
@@ -9,8 +9,8 @@
 
 <h1>Math.NET Classic</h1>
 <p>
-Math.NET Classic is an opensource framework written in C# for symbolic mathematical operations in an object
-oriented way, supporting scalar & complex Linear Algebra (Vector, Matrix, Tensor), Complex Expressions,
+Math.NET Classic is an opensource framework written in C# for symbolic mathematical operations in an object-oriented way,
+supporting scalar & complex Linear Algebra (Vector, Matrix, Tensor), Complex Expressions,
 Hyperbolics and Trigonometry, Logic Algebra, 3D geometry with vectors and plains, digital circuits and
 finite state machines as well as operations like derivation, integration, taylor approximation,
 expression evaluation, irregular linear system solving and more.
@@ -38,8 +38,8 @@ to fetch the sources, otherwise clone it in the shell with:</p>
 <pre>$ git clone git://github.com/mathnet/mathnet-linqalgebra.git</pre>
 
 <p>
-We use the <em><a href="https://help.github.com/articles/using-pull-requests/">Fork & Pull model</a></em>, as common for Github projects.
-Instead of asking for permission, simply fork the project on Github, commit your changes in a separate branch and send a pull request to one of the maintainers.
+We use the <em><a href="https://help.github.com/articles/using-pull-requests/">Fork & Pull model</a></em>, as common for GitHub projects.
+Instead of asking for permission, simply fork the project on GitHub, commit your changes in a separate branch and send a pull request to one of the maintainers.
 A maintainer will then merge your changes back to mainline, or work together with you on the changes if they are not acceptable yet.
 Only maintainers can write to mainline, but anyone can contribute - don't ask, do!
 </p>
